themes/TLM2021/static/style.css
/* #region BASICS */

@font-face {
    font-family: "Barlow";
    src: url("fonts/Barlow-Regular.woff2") format('woff2');
    font-weight: normal;
}

@font-face {
    font-family: "Barlow";
    src: url("fonts/Barlow-Bold.woff2") format('woff2');
    font-weight: bold;
}

@font-face {
    font-family: "Barlow";
    src: url("fonts/Barlow-Light.woff2") format('woff2');
    font-weight: 300;
}

html {
    font-family: "Barlow", sans-serif;
    /* background: #EAEAEA; */

    --color-a: #EB1478;
    --color-b: #E026B0;
    --color-c: #C81AFA;
    --color-d: #9713FF;
    --color-e: #7945FF;
    --color-f: #5850FF;
    --color-g: #455BFF;

    --color-foreground: black;
    color: var(--color-foreground);

    --color-pink: #EB1478;
    --color-purple: #9D21FF;
    --color--blue: #455BFF;

    font-size: 50%; /* Will result in 1.8rem being 14px */
}

@media (min-width: 650px) {
    html {
        font-size: 55.5556%; /* So 1.8rem becomes 16px etc... */
    }
 }

@media (min-width: 1024px) {
    html {
        font-size: 62.5%; /* So 1.8rem becomes 18px etc... */
    }
 }

@media (prefers-color-scheme: dark) {
    html {
        --color-foreground: #DEDEDE;
        background: #1B1B1B;
    }
}

body {
    font-size: 2rem;
}

h1 {
    font-weight: 300;
    font-size: 4.8rem;
    text-align: center;
}

h2, h3 {
    font-size: inherit;
    font-weight: normal;
}

.blurb {
    max-width: 50rem;
    margin: 2rem auto 4rem;
}

p {
    margin: 0;
    margin-bottom: 1em;
}

a:link {
    color: #DB25AC;
}

a:visited {
    color: #B84D9C;
}

img {
    box-shadow: rgba(0, 0, 0, 0.125) 0px 2px 12px;
    width: 100%;
    border-radius: 3px;
}

img.straight-corners {
    border-radius: 0;
}

.content {
    margin-left: auto;
    margin-right: auto;
    max-width: 55rem;
    text-align: left;
}

.content img {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

@media (min-width: 650px) {
    .content img {
        position: relative;
        width: 110%;
        right: 7%;
        
    }

    .content h3 + p img {
        width: 140%;
        right: 20%;
    }
}

img.center {
    position: unset;
    width: unset;
    right: unset;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
}

.article h2 {
    font-size: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 0.3rem;
    margin-top: 5rem;
}

.article {
    text-align: left;
}

/* #endregion */

/* #region SITE SECTION and MAIN NAV common */

.navContainer:nth-child(1) { --nav-color: var(--color-a); }
.navContainer:nth-child(2) { --nav-color: var(--color-c); }
.navContainer:nth-child(3) { --nav-color: var(--color-d); }
.navContainer:nth-child(4) { --nav-color: var(--color-e); }
.navContainer:nth-child(5) { --nav-color: var(--color-f); }
.navContainer:nth-child(6) { --nav-color: var(--color-g); }

.navItem, .navItem:link, .navItem:visited {
    color: var(--nav-color);
    text-decoration: none;
    text-transform: lowercase;
    border-bottom: 2px solid transparent;
}

a.navItem:hover {
    border-color: var(--nav-color);
}

.navItem-active, .navItem-active:link, .navItem-active:visited {
    font-weight: bold !important;
    --nav-stroke-width: 2px;
}

@supports (-webkit-text-stroke: 1px red) {
    .navItem-active, .navItem-active:link, .navItem-active:visited {
        color: transparent;
        -webkit-text-stroke: var(--nav-stroke-width) var(--nav-color);
    }
}

/* #endregion */

/* #region MAIN NAV */

.mainNav {
    position: relative;
    text-align: center;
    margin-bottom: 5rem;
}

.mainNav .navItem {
    vertical-align: -18%;
    margin: 0 0.35rem;
    font-size: 2rem;
    --nav-stroke-width: 1px;
}

.mainNav .navItem-active {
    font-size: 6rem;
}

@media (min-width: 500px) {
    .mainNav .navItem {
        --nav-stroke-width: 1.5px;
    }
}

@media (min-width: 1024px) {
    .mainNav .navItem {
        --nav-stroke-width: 2px;
        margin: 0 1rem;
    }

    .mainNav .navItem-active {
        font-size: 10rem;
    }
 }

/* #endregion */


/* #region FOOTER */

footer::before {
    content: " ";
    line-height: 0;
    width: 7.5rem;
    display: block;
    margin: 8rem auto 3rem;
    border-top: 1px solid var(--color-foreground);
}

footer {
    text-align: center;
}

.copyrightNotice {
    margin-top: 7rem;
    display: block;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    font-size: 1.4rem;
    margin-bottom: 5rem;
}

/* #endregion */


/* #region PROJECTS */

.project-list {
    text-align: center;
}

.projectItem {
    text-align: left;
    

    /* For stretched link */
    position: relative;

    margin: 1.5rem;
}

.projectItem h3 {
    font-size: inherit;
    font-weight: inherit;
    width: 100%;
}

.projectItem a::after {
    /* stretched link */
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    content: "";
}

@media (min-width: 400px) {
    .projectItem {
        display: inline-table;

        /* So that the text doesn't make the .projectItem wider
        (yet the img does) */
        inline-size: min-content;
    }

    .projectItem img {
        height: 15rem;
        width: auto;
    }
 }

 @media (min-width: 600px) {
    .projectItem img {
        height: 20rem;
    }
 }

 @media (min-width: 800px) {
    .projectItem img {
        height: 25rem;
    }
 }

 @media (min-width: 1024px) {
    .projectItem {
        margin: 3rem 4rem;
    }

    .projectItem img {
        height: 27rem;
        width: auto;
    }
}

.content.project h3 {
    font-style: italic;
    text-align: center;
}

/* #endregion */

/* #region SITE SECTION (FRONTPAGE + FOOTER NAV) */

.siteSection {
    font-size: 1.6rem;
    margin: 5rem auto;
    max-width: 38.5rem;
    text-align: center;
}

.siteSectionsHomepage .siteSection {
    font-size: 1.8rem;
    max-width: 42rem;
    margin: 2rem auto 6rem;
}

.siteSection .navItem {
    font-size: 2.4rem;
}

.siteSectionsHomepage .navItem {
    font-size: 4.2rem;
    font-weight: 100;
}

.siteSectionsHomepage .navItem-active {
    font-size: 14.4rem;
    margin: 0;
} 

.siteSection .projectItem {
    inline-size: auto;
    text-align: center;
    margin: 0 3.5rem;
}

.siteSection .projectItem img {
    height: auto;
    width: 100%;
}

/* #endregion */

/* #region CONTACT */

.contact {
    text-align: center;
}

.content.contact {
    margin-top: 2rem;
}

.contact ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-align: center;
}

.contact li {
    display: inline;
    margin: 0.5rem;
}

/* #endregion */

